# CPPlugins

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cpplugins.hpp  example_app.cpp  main.cpp  test.cpp  test.h
include/: cpplugins.hpp  defs.h  sample_API.hpp  sample_interface.hpp  undefs.h
lib/: CMakeLists.txt
lib/example1/: CMakeLists.txt  test.cpp  test.h
lib/test1/: CMakeLists.txt  test.cpp  test.h
test/: testing.hpp
test/1/: BasicLoading.cpp  BasicLoadingAPI.h  BasicLoadingLib.cpp  BasicLoadingLib.h  CMakeLists.txt
